--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,10 +68,14 @@ tokio = { version = "1.20.1", features = ["rt", "io-util"], optional = true }
 [target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
 async-broadcast = "0.5.1"
 libc = { version = "0.2", optional = true }
-objc = "0.2.7"
+objc = { version = "0.2.8", package = "objc-rs" }
 objc_id = "0.1.1"
 objc-foundation = "0.1.1"
 tokio = { version = "1.20.1", features = ["net"], optional = true }
+
+[patch.crates-io]
+objc_id = { path = "../rust-objc-id/" }
+objc-foundation = { path = "../rust-objc-foundation/" }
 
 [[example]]
 name = "scan"
