--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,23 +17,32 @@ targets = [
     "x86_64-apple-darwin",
     "x86_64-pc-windows-msvc",
     "x86_64-unknown-linux-gnu",
-    "aarch64-linux-android"
+    "aarch64-linux-android",
 ]
 
 [features]
 unstable = []
-l2cap = []
+l2cap = ["bluer/l2cap", "dep:futures-io", "dep:core-foundation-sys"]
 serde = ["dep:serde", "uuid/serde", "bluer/serde"]
+tokio = ["dep:tokio", "dep:libc"]
 
 [dependencies]
 async-trait = "0.1.57"
 futures-core = "0.3.28"
 futures-lite = { version = "1.13.0", default-features = false }
+futures-io = { version = "0.3.28", optional = true }
 serde = { version = "1.0.143", optional = true, features = ["derive"] }
 tracing = { version = "0.1.36", default-features = false }
+tokio = { version = "1.20.1", optional = true, features = ["net"] }
 
 [dev-dependencies]
-tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread", "time"] }
+tokio = { version = "1.20.1", features = [
+    "macros",
+    "rt-multi-thread",
+    "time",
+    "io-util",
+] }
+futures-util = { version = "0.3.28", features = ["io"]}
 tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
 
 [target.'cfg(not(target_os = "linux"))'.dependencies]
@@ -63,10 +72,21 @@ async-channel = "2.2.0"
 
 [target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
 async-broadcast = "0.5.1"
-objc = "0.2.7"
+objc = { version = "0.2.8", package = "objc-rs" }
 objc_id = "0.1.1"
 objc-foundation = "0.1.1"
+core-foundation-sys = { version = "0.8.7", optional = true }
+libc = { version = "0.2", optional = true }
+
+
+[patch.crates-io]
+objc_id.path = "../rust-objc-id"
+objc-foundation.path = "../rust-objc-foundation"
 
 [[example]]
 name = "scan"
 doc-scrape-examples = true
+
+[[example]]
+name = "l2cap_client"
+required-features = ["l2cap"]
