--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bluest"
-version = "0.6.8"
+version = "0.7.0"
 authors = ["Alex Moon"]
 edition = "2021"
 description = "A cross-platform Bluetooth Low Energy (BLE) library"
@@ -17,7 +17,7 @@ targets = [
     "x86_64-apple-darwin",
     "x86_64-pc-windows-msvc",
     "x86_64-unknown-linux-gnu",
-    "aarch64-linux-android"
+    "aarch64-linux-android",
 ]
 
 [features]
@@ -55,7 +55,7 @@ windows = { version = "0.48.0", features = [
     "Storage_Streams",
     "Win32_Foundation",
     "Win32_System_LibraryLoader",
-    "Win32_System_SystemInformation"
+    "Win32_System_SystemInformation",
 ] }
 
 [target.'cfg(target_os = "linux")'.dependencies]
@@ -63,8 +63,7 @@ bluer = { version = "0.16.1", features = ["bluetoothd"] }
 tokio = { version = "1.20.1", features = ["rt-multi-thread"] }
 
 [target.'cfg(target_os = "android")'.dependencies]
-java-spaghetti = "0.2.0"
-async-channel = "2.2.0"
+bluedroid.path = "../rust_android_integration/rust/bluedroid"
 
 [target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
 async-broadcast = "0.5.1"
