--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
+
 name = "bluest"
-version = "0.6.6"
+version = "0.7.0"
 authors = ["Alex Moon"]
 edition = "2021"
 description = "A cross-platform Bluetooth Low Energy (BLE) library"
@@ -11,13 +12,13 @@ keywords = ["bluetooth", "BLE", "gatt", "bluez", "corebluetooth"]
 categories = ["asynchronous", "hardware-support", "os"]
 
 [package.metadata.docs.rs]
-features = ["serde"]
-default-target = "x86_64-apple-darwin"
 targets = [
     "x86_64-apple-darwin",
     "x86_64-pc-windows-msvc",
     "x86_64-unknown-linux-gnu",
 ]
+features = ["serde"]
+default-target = "x86_64-apple-darwin"
 
 [features]
 serde = ["dep:serde", "uuid/serde", "bluer/serde"]
@@ -61,9 +62,7 @@ bluer = { version = "0.16.1", features = ["bluetoothd"] }
 tokio = { version = "1.20.1", features = ["rt-multi-thread"] }
 
 [target.'cfg(target_os = "android")'.dependencies]
-java-spaghetti = "0.2.0"
-async-channel = "2.2.0"
-tokio = { version = "1.20.1", features = ["rt", "io-util"], optional = true }
+bluedroid.path = "../rust_android_integration/rust/bluedroid"
 
 [target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
 async-broadcast = "0.5.1"
