--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,6 +63,7 @@ tokio = { version = "1.20.1", features = ["rt-multi-thread"] }
 
 [target.'cfg(target_os = "android")'.dependencies]
 bluedroid.path = "../rust_android_integration/rust/bluedroid"
+async-lock = "3.4.0"
 tokio = { version = "1.20.1", optional = true }
 tokio-util = {version = "0.7.15" , optional = true, default-features = false, features = ["io", "compat"]}
 
